--- a/Untitled-7.ipynb
+++ b/Untitled-7.ipynb
@@ -1,30 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.5"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python395jvsc74a57bd07812ea015bdcee6f23a998adcdd2ef97c151c0c241b7b7070987d9313e41299d",
-   "display_name": "Python 3.9.0 64-bit"
-  },
-  "metadata": {
-   "interpreter": {
-    "hash": "7812ea015bdcee6f23a998adcdd2ef97c151c0c241b7b7070987d9313e41299d"
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -83,8 +57,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "https://www.amazon.com/s?k=amazon+best+seller+backpacking+tent&crid=AIFEP5LPE61I&sprefix=best+seller+backpacking+tent%2Caps%2C336&ref=nb_sb_ss_ts-doa-p_1_28\n"
      ]
@@ -119,8 +93,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Collecting bs4\n",
       "  Using cached bs4-0.0.1.tar.gz (1.1 kB)\n",
@@ -153,14 +127,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "22"
       ]
      },
+     "execution_count": 142,
      "metadata": {},
-     "execution_count": 142
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -293,7 +267,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "('Go Time Gear Life Tent Emergency Survival Shelter – 2 Person Emergency Tent – Use As Survival Tent, Emergency Shelter, Tube Tent, Survival Tarp - Includes Survival Whistle & Paracord',\n",
@@ -303,8 +276,9 @@
        " 'https://www.amazon.com/gp/slredirect/picassoRedirect.html/ref=pa_sp_atf_aps_sr_pg1_1?ie=UTF8&adId=A0621608CSETSE5WLK45&url=%2FGo-Time-Gear-Emergency-Survival%2Fdp%2FB07NVWY95Y%2Fref%3Dsr_1_1_sspa%3Fcrid%3DAIFEP5LPE61I%26dchild%3D1%26keywords%3Damazon%2Bbest%2Bseller%2Bbackpacking%2Btent%26qid%3D1622228096%26sprefix%3Dbest%2Bseller%2Bbackpacking%2Btent%252Caps%252C336%26sr%3D8-1-spons%26psc%3D1&qualifier=1622228096&id=375141094088778&widgetName=sp_atf')"
       ]
      },
+     "execution_count": 153,
      "metadata": {},
-     "execution_count": 153
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -317,10 +291,28 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "$19.95\n$74.99\n$14.99\n$79.99\n$76.99\n$59.99\n$74.99\n$79.99\n$529.95\n$69.50\n$69.99\n$145.00\n$70.99\n$84.99\n$69.99\n$99.99\n$23.80\n$199.99\n$58.99\n"
+      "$19.95\n",
+      "$74.99\n",
+      "$14.99\n",
+      "$79.99\n",
+      "$76.99\n",
+      "$59.99\n",
+      "$74.99\n",
+      "$79.99\n",
+      "$529.95\n",
+      "$69.50\n",
+      "$69.99\n",
+      "$145.00\n",
+      "$70.99\n",
+      "$84.99\n",
+      "$69.99\n",
+      "$99.99\n",
+      "$23.80\n",
+      "$199.99\n",
+      "$58.99\n"
      ]
     }
    ],
@@ -433,15 +425,32 @@
    "source": [
     "main('amazon best seller backpacking tent')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "electronics"
-   ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.9.0 64-bit",
+   "name": "python395jvsc74a57bd07812ea015bdcee6f23a998adcdd2ef97c151c0c241b7b7070987d9313e41299d"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.5"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "7812ea015bdcee6f23a998adcdd2ef97c151c0c241b7b7070987d9313e41299d"
+   }
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
